fix nerual behavior merging to be more clear

--- a/script_templates/trial_end.ipynb
+++ b/script_templates/trial_end.ipynb
@@ -82,18 +82,14 @@
     "good_epochs = [i for i,x in enumerate(trial_end_epochs.get_annotations_per_epoch()) if not x]\n",
     "bad_epochs = [i for i,x in enumerate(trial_end_epochs.get_annotations_per_epoch()) if  x]\n",
     "\n",
-    "# only good epochs\n",
-    "trial_end_epochs = trial_end_epochs[good_epochs]\n",
-    "\n",
     "# load behavioral data\n",
     "trial_end_data = pd.read_csv(f\"{raw_data_dir}/behave/{subject}_died_events.csv\")\n",
     "\n",
-    "## Prep Behavioral Data\n",
-    "trial_end_data['trial_numeric'] = trial_end_data['trial_numeric'] - 1\n",
-    "trial_end_data = trial_end_data[trial_end_data.index.isin(good_epochs)]\n",
-    "\n",
     "# set info as metadata\n",
-    "trial_end_epochs.metadata = trial_end_data"
+    "trial_end_epochs.metadata = trial_end_data\n",
+    "\n",
+    "# only good epochs\n",
+    "trial_end_epochs = trial_end_epochs[good_epochs]"
    ]
   },
   {
